# Portfolio_Risk_Platform

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily_pipeline.yml
app/: Home.py
app/pages/: 1_Volatility_and_VaR.py  2_Backtesting.py  3_Monitoring_and_Alerts.py  4_Methodology.py  5_Announcements.py
config/: portfolio.yaml
data/: alerts_history.parquet  announcement_event_study.parquet  announcement_signals.parquet  announcements.parquet  backtest_results.parquet  backtest_summary.parquet  monitor_status.json  prices.parquet  returns.parquet  risk_metrics.parquet
docs/: how_it_was_built.md  how_it_works.md  methodology.md
src/riskplatform/: __init__.py  alerting.py  artifacts.py  backtest.py  config.py  dashboard.py  garch.py  ingestion.py  monitoring.py  pipeline.py  returns.py  var_es.py
src/riskplatform/intel/: __init__.py  evals.py  events.py  extract.py  ingest.py
tests/: conftest.py  test_artifacts.py  test_backtest.py  test_garch.py  test_intel.py  test_monitoring.py  test_pipeline_integration.py  test_var_es.py
