[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "riskplatform"
version = "0.1.0"
description = "Live self-monitoring portfolio market-risk platform: daily GARCH/VaR/ES, Basel-style backtesting, drift monitoring, Streamlit dashboard"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
